fixed jump water

--- a/starter-code/styles/main.css
+++ b/starter-code/styles/main.css
@@ -94,21 +94,22 @@ h4 {
 
 /* Board vars, change later */
 .grid-item.player {
-  background-image: url('../assets/pika-sprite.png');
+  background-image: url('../assets/dog.png');
   background-repeat: no-repeat;
   background-size: contain;
   position: relative;
   z-index: 100;
+  background-color: transparent;
 }
 
 .grid-item.player-won {
-  background-image: url('../assets/pika-sprite.png');
+  background-image: url('../assets/dog.png');
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .grid-item.player-dead {
-  background-image: url('../assets/pika-sprite.png');
+  background-image: url('../assets/dog.png');
   background-repeat: no-repeat;
   background-size: contain;
   animation: player-dies 1s ease-out;
@@ -162,14 +163,14 @@ h4 {
   background-color: black;
 }
 
-.grid-item.homes {
-  background-image: url(../assets/houses.png);
+.grid-item.safe-place.homes {
+  background-image: url(../assets/houses.png), url(../assets/grass.png);
   background-size: contain;
   background-repeat: no-repeat;
 }
 
-.grid-item.homes.player {
-  background-image: url(../assets/pika-sprite.png), url(../assets/houses.png);
+.grid-item.safe-place.player-won {
+  background-image: url(../assets/dog.png), url(../assets/houses.png), url(../assets/grass.png);
   background-size: contain;
 }
 
@@ -185,15 +186,7 @@ h4 {
   position: relative;
 }
 
-.grid-item.log-last {
-  background-image: url(../assets/log.png);
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-color: blue;
-  position: relative;
-}
-
-.grid-item.log-last::before {
+.grid-item.log::before {
   content: "";
   display: block;
   height: 50px;
@@ -207,26 +200,9 @@ h4 {
   z-index: -500;
 }
 
-
-
-/* .grid-item.last-log::before {
-  content: "";
-  display: block;
-  height: 50px;
-  width: 50px;
-  -webkit-transform: translateX(-50px);
-  -ms-transform: translateX(-50px);
-  transform: translateX(-50px);
-  background-image: url(../assets/log.png);
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-color: red;
-  position: absolute;
-  z-index: -500;
-} */
 
 .grid-item.log.player{
-  background-image: url(../assets/pika-sprite.png), url(../assets/log.png);
+  background-image: url(../assets/dog.png), url(../assets/log.png);
   background-size: contain;
 }
 
@@ -251,11 +227,11 @@ h4 {
 }
 
 .grid-item.leaf.player{
-  background-image: url(../assets/pika-sprite.png), url(../assets/lilypad.png);
+  background-image: url(../assets/dog.png), url(../assets/lilypad.png);
   background-size: contain;
 }
 
-.grid-item.safe-place{
+.grid-item.safe-place {
   position: relative;
   z-index: 1;
   background-image: url(../assets/grass.png);
@@ -263,19 +239,19 @@ h4 {
 }
 
 .grid-item.safe-place.player{
-  background-image: url(../assets/pika-sprite.png), url(../assets/grass.png);
+  background-image: url(../assets/dog.png), url(../assets/grass.png);
   background-size: contain;
 }
 
 /* ///////////////////////////////////////// */
 
 .moving-right {
-  animation: right .6s linear;
+  animation: right .5s linear;
 } 
 
 
 .moving-left {
-  animation: left .6s linear;
+  animation: left .5s linear;
 } 
 
 .moving-right-log {
@@ -284,8 +260,31 @@ h4 {
 } 
 
 .moving-left-log {
-  animation: left 1s linear;
+  animation: left .8s linear;
 } 
+/* 
+@keyframes left-log {
+  0% {
+    -webkit-transform: translateX(0px);
+    -ms-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+  25% {
+    -webkit-transform: translateX(-12.5px);
+    -ms-transform: translateX(-12.5px);
+    transform: translateX(-12.5px);
+  }
+  50% {
+    -webkit-transform: translateX(-25px);
+    -ms-transform: translateX(-25px);
+    transform: translateX(-25px);
+  }
+  100% {
+    -webkit-transform: translateX(-50px);
+    -ms-transform: translateX(-50px);
+    transform: translateX(-50px);
+  }
+} */
 
 @keyframes right {
   0% {
@@ -294,19 +293,19 @@ h4 {
     transform: translateX(0px);
   }
   25% {
-    -webkit-transform: translateX(15px);
-    -ms-transform: translateX(15px);
-    transform: translateX(15px);
+    -webkit-transform: translateX(12.5px);
+    -ms-transform: translateX(12.5px);
+    transform: translateX(12.5px);
   }
   50% {
-    -webkit-transform: translateX(30px);
-    -ms-transform: translateX(30px);
-    transform: translateX(30px);
+    -webkit-transform: translateX(25px);
+    -ms-transform: translateX(25px);
+    transform: translateX(25px);
   }
   100% {
-    -webkit-transform: translateX(60px);
-    -ms-transform: translateX(60px);
-    transform: translateX(60px);
+    -webkit-transform: translateX(50px);
+    -ms-transform: translateX(50px);
+    transform: translateX(50px);
   }
 }
 
@@ -317,19 +316,19 @@ h4 {
     transform: translateX(0px);
   }
   25% {
-    -webkit-transform: translateX(-15px);
-    -ms-transform: translateX(-15px);
-    transform: translateX(-15px);
+    -webkit-transform: translateX(-12.5px);
+    -ms-transform: translateX(-12.5px);
+    transform: translateX(-12.5px);
   }
   50% {
-    -webkit-transform: translateX(-30px);
-    -ms-transform: translateX(-30px);
-    transform: translateX(-30px);
+    -webkit-transform: translateX(-25px);
+    -ms-transform: translateX(-25px);
+    transform: translateX(-25px);
   }
   100% {
-    -webkit-transform: translateX(-60px);
-    -ms-transform: translateX(-60px);
-    transform: translateX(-60px);
+    -webkit-transform: translateX(-50px);
+    -ms-transform: translateX(-50px);
+    transform: translateX(-50px);
   }
 }
 
